--- a/main.html
+++ b/main.html
@@ -10,6 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<main>
+		<h1>Testimonials</h1>
+		<div>
+			<p>This product is amazing! I highly recommed it to anyone in need of a solution like this.</p><br>
+			<p class="author">- John Doe</p>
+		</div>
+		<br>
+		<div>
+			<p>I have been using this for a few weeks and it has completely transformed my workflow.</p><br>
+			<p class="author">- Jane Smith</p>
+		</div>
+	</main>
 
 </body>
 
