--- a/main.html
+++ b/main.html
@@ -11,16 +11,17 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<main>
+			<div class="testimonial-section">
 		<h1>Testimonials</h1>
-		<div>
-			<p>This product is amazing! I highly recommed it to anyone in need of a solution like this.</p><br>
-			<p class="author">- John Doe</p>
+		<div class="testimonial">
+		  <p class="testimonial-text">This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+		  <p class="testimonial-author">- John Doe</p>
 		</div>
-		<br>
-		<div>
-			<p>I have been using this for a few weeks and it has completely transformed my workflow.</p><br>
-			<p class="author">- Jane Smith</p>
+		<div class="testimonial">
+		  <p class="testimonial-text">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+		  <p class="testimonial-author">- Jane Smith</p>
 		</div>
+			</div>
 	</main>
 
 </body>
